--- a/ddec-2021/index.html
+++ b/ddec-2021/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header> 
-   <h1>holaaaaa</h1> 
+   <h1>Página de Pruebas de Clases</h1> 
    <header>
        <main>
         <img src="../ddec-2021/imagenes/a.jpg" alt="Foto de Ariana">
