--- a/presentación 1.html
+++ b/presentación 1.html
@@ -15,10 +15,15 @@
       <main>
         <img src="../bitacora-michelldiaz/imagenes/michellfoto.jpg" alt="Michell">
     </main>
-    <p> Estudiante de Diseño e[ad] pucv
-        Tercer año 
-        Valparaíso/Chile
+    <p> Estudiante de Diseño e[ad] Pucv
+        Actualmente en Tercer Año 
+        Antofagasta - Valparaíso - Chile
     </p>
         <a href="https://wiki.ead.pucv.cl/Michell_Diaz">Página de la wiki</a>
 </body>
+
+<div class="bloque" >
+    <p><strong>Bitácora virtual</strong> de <strong>Diseño desde el código</strong> del año 2021. </p>
+    <p>Impartido por Basilio Cáceres y Felipe Lavín.</p>
+   
 </html>
