--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitacora Diseño desde el Codigo 2021</title>
 </head>
-<body>
+<body> 
+   <a href="../bitacora-michelldiaz/Primera Clase .html">Primera Clase</a>
+   <a href="../bitacora-michelldiaz/Segunda Clase.html .html">Segunda Clase</a>
+   <a href="../bitacora-michelldiaz/Tercera Clase.html .html">Segunda Clase</a>
+   <a href="../bitacora-michelldiaz/Cuarta Clase.html .html">Segunda Clase</a>
   <h1 id ="main tittle"> Bitacora Diseño desde el Código </h1>  
   
   <main>
     <img src="imagenes/gatogif.opdownload" alt="gif de gato">
    </main>
    <footer>
-    Documentación de las clases impartidas en el segundo semestre de 2021
+    Documentación de las clases impartidas en el segundo semestre de 2021, basadas en las presentaciones hechas clase a clase.
 </footer>
 </body>
+<div class="bloque" >
+  <p><strong>Bitácora virtual</strong> de <strong>Diseño desde el código</strong> del año 2021. </p>
+  <p>Impartido por Basilio Cáceres y Felipe Lavín.</p>
 </html>
