--- a/Página de Inicio Bitacora.html
+++ b/Página de Inicio Bitacora.html
@@ -7,10 +7,11 @@
     <title>Bitacora Diseño desde el Codigo 2021</title>
 </head>
 <body> 
+
    <a href="../bitacora-michelldiaz/Primera Clase .html">Primera Clase</a>
    <a href="../bitacora-michelldiaz/Segunda Clase.html .html">Segunda Clase</a>
-   <a href="../bitacora-michelldiaz/Tercera Clase.html .html">Segunda Clase</a>
-   <a href="../bitacora-michelldiaz/Cuarta Clase.html .html">Segunda Clase</a>
+   <a href="../bitacora-michelldiaz/Tercera Clase.html .html">Tercera Clase</a>
+   <a href="../bitacora-michelldiaz/Cuarta Clase.html .html">Cuarta Clase</a>
   <h1 id ="main tittle"> Bitacora Diseño desde el Código </h1>  
   
   <main>
