--- a/Pagina de Inicio.html
+++ b/Pagina de Inicio.html
@@ -25,7 +25,7 @@
     </section>
     <section class="home-posts">
         <h2 class="home-posts__title">Últimas Entradas</h2>
-        <article>
+        <article class="home-post">
             <h3>Titulo del articulo</h3>
             <div>Publicado el</div><time>30 de septiembre 2021</time>
             <div>
