Pagina de Inicio (Clase 5)
Realizacion de página, siguiendo la clase 5

--- a/Pagina de Inicio.html
+++ b/Pagina de Inicio.html
@@ -11,17 +11,21 @@
     <link rel="stylesheet" href="../bitacora-michelldiaz/ddec-2021/css/style.css" media="all">
 </head>
 <body> 
-    <header class="site header">
-        <h1>Diseño desde el Codigo</h1>
-        <nav><a href="#">Sobre Mi</a>
-            <a href="#">Bitacora del Curso</a>
+    <header class="site-header">
+        <div class="container">
+           <h1>Diseño desde el Codigo</h1>
+             <nav class= "site-navigation">
+               <a href="#">Sobre Mi</a> 
+               <a href="#">Bitacora del Curso</a>
         </nav>
-        
+    </div>
     </header>
     <main class="site-main">
-        <section class="home-presentation">
-        <h2 class="home-presentation__title">Presentación</h2>
-        <p class="home-presentation__description">Presentación acerca del ramo </p>
+        <div class="container">
+           <section class="home-presentation">
+             <h2 class="home-presentation__title">Presentación</h2>
+                 <div class="home-presentation__description">
+                   <p class="home-presentation__description">Presentación acerca del ramo </p>
     </section>
     <section class="home-posts">
         <h2 class="home-posts__title">Últimas Entradas</h2>
@@ -38,6 +42,12 @@
     </main>
 
     <footer class="site-footer">
+        <div class="container"> 
+        <address>Antofagasta</address>
+    </div>
 
     </footer>
+        
+    </body>
+    </html>
  
