--- a/Sobre mi/presentación 1.html
+++ b/Sobre mi/presentación 1.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michell Gabriel Díaz Quilaqueo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,900;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../bitacora-michelldiaz/ddec-2021/css/style.css" media="all">
+    
 </head>
 <body id="presentacion">
   <header>
