Mega Actualización de Paginas y Codigos
Arreglos e imagenes que se agregan para la toma de apuntes

--- a/Pagina de Inicio.html
+++ b/Pagina de Inicio.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitacora Diseño desde el Codigo 2021</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,900;1,300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto+Mono:wght@700&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../bitacora-michelldiaz/ddec-2021/css/style.css" media="all">
 </head>
-<body> 
+<body background="../bitacora-michelldiaz/imagenes/fondoweb.png"> 
+    
     <header class="site-header">
         <div class="container">
            <h1>Diseño desde el Codigo</h1>
              <nav class= "site-navigation">
-               <a href="#">Sobre Mi</a> 
+               <a href="../bitacora-michelldiaz/Sobre mi/presentación 1.html">Sobre Mi</a> 
                <a href="#">Bitacora del Curso</a>
-        </nav>
+            </nav>
     </div>
     </header>
     <main class="site-main">
@@ -25,25 +26,20 @@
            <section class="home-presentation">
              <h2 class="home-presentation__title">Presentación</h2>
                  <div class="home-presentation__description">
-                   <p class="home-presentation__description">Presentación acerca del ramo </p>
+                   <p class="home-presentation__description">Este ramo abarca la revisión y practica de tipos de lenguaje de codigo, el fin, realizar nuestras primeras páginas web, a medida que vamos conociendo cada tipo de lenguaje e indagando por cuenta propia. Este ramo esta dirigido por Basilio Cáceres y Felipe Lavín.
+                       Te invito Revisar los botones superiores para revisar información sobre mí y también apuntes de cada clase! </p>
     </section>
-    <section class="home-posts">
-        <h2 class="home-posts__title">Últimas Entradas</h2>
-        <article class="home-post">
-            <h3>Titulo del articulo</h3>
-            <div>Publicado el</div><time>30 de septiembre 2021</time>
-            <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius tempora architecto minus praesentium delectus. Dolorum voluptas accusantium, pariatur labore at reprehenderit deleniti veniam quae rem aliquam a in, ullam illo.</p>
-             </div>
-             <div>Autor: <cite>Michell Díaz Quilaqueo</cite></div>
-             <div>Categorias: <a href="#">Antofagasta</a>, <a href="#">Antofagasta</a></div>
-        </article>
+    <section class=padre>
+        <p class="columna">Hola</p>
+        <p class="columna">Gracias por Leer</p>
+        <p class="columna">Mi Primera Web!</p>
+        
     </section>
     </main>
 
     <footer class="site-footer">
         <div class="container"> 
-        <address>Antofagasta</address>
+        <address>Sitio Web Realizado por Michell Diaz </address>
     </div>
 
     </footer>
