--- a/Página de Inicio Bitacora.html
+++ b/Página de Inicio Bitacora.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="../bitacora-michelldiaz/ddec-2021/css/style.css" media="all">
 </head>
 <body> 
-
+  <nav>
    <a href="../bitacora-michelldiaz/Primera Clase .html">Primera Clase</a>
    <a href="../bitacora-michelldiaz/Segunda Clase.html .html">Segunda Clase</a>
    <a href="../bitacora-michelldiaz/Tercera Clase.html .html">Tercera Clase</a>
    <a href="../bitacora-michelldiaz/Cuarta Clase.html .html">Cuarta Clase</a>
+  </nav>
   <h1 id ="main tittle"> Bitacora Diseño desde el Código </h1>  
   
   <main>
