Link de clases y aPUNTES

--- a/Pagina de Inicio.html
+++ b/Pagina de Inicio.html
@@ -17,14 +17,14 @@
            <h1>Diseño desde el Codigo</h1>
              <nav class= "site-navigation">
                <a href="../bitacora-michelldiaz/Sobre mi/presentación 1.html">Sobre Mi</a> 
-               <a href="#">Bitacora del Curso</a>
+               <a href="../bitacora-michelldiaz/Clases/Clases Linkeadas.html">Bitacora del Curso</a>
             </nav>
     </div>
     </header>
     <main class="site-main">
         <div class="container">
            <section class="home-presentation">
-             <h2 class="home-presentation__title">Presentación</h2>
+             <h2 class="home-presentation__title">¿Para qué es esta Web?</h2>
                  <div class="home-presentation__description">
                    <p class="home-presentation__description">Este ramo abarca la revisión y practica de tipos de lenguaje de codigo, el fin, realizar nuestras primeras páginas web, a medida que vamos conociendo cada tipo de lenguaje e indagando por cuenta propia. Este ramo esta dirigido por Basilio Cáceres y Felipe Lavín.
                        Te invito Revisar los botones superiores para revisar información sobre mí y también apuntes de cada clase! </p>
