Cierre de Bitacora
Paginas de cierre y ajustes

--- a/Clases/Clases Linkeadas.html
+++ b/Clases/Clases Linkeadas.html
@@ -19,10 +19,10 @@
                <a href="../Clases/Primera Clase .html">Clase 1</a> 
                <a href="../Clases/Segunda Clase.html">Clase 2</a> 
                <a href="../Clases/Tercera Clase.html">Clase 3</a> 
-               <a href="../Pagina de Inicio.html">Clase 4</a> 
-               <a href="../Pagina de Inicio.html">Clase 5</a> 
-               <a href="../Pagina de Inicio.html">Clase 6</a> 
-               <a href="../Pagina de Inicio.html">Clase 7</a> 
+               <a href="../Clases/Cuarta Clase.html">Clase 4</a> 
+               <a href="../Clases/Quinta Clase.html">Clase 5</a> 
+               <a href="../Clases/Quinta Clase.html">Clase 6</a> 
+               <a href="../Clases/Cierre Bitacora.html">Final del Camino</a> 
                
             </nav>
     </div>
