arreglo de direccion
arreglo de direccion

--- a/Clases/Cierre Bitacora.html
+++ b/Clases/Cierre Bitacora.html
@@ -15,7 +15,7 @@
        <h1>GRACIAS POR LLEGAR HASTA ACÁ </h1>
          <nav class= "site-navigation">
            <a href="../Pagina de Inicio.html">Inicio</a> 
-           <a href="../Clases/Segunda Clase.html">Clase Siguiente</a>
+           <a href="">Se acabó</a>
         </nav>
 </div>
 </header>
